Thu Apr 18 17:47:40 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * bin/dcps_tests.lst:

          Don't run SubscriberCycle test for DDS build
          with content filtered topics disabled.

        * tests/DCPS/SubscriberCycle/SubscriberCycle.mpc:

          Don't build SubscriberCycle test for DDS build
          with content filtered topics disabled. Complete
          fix from previous commit so builds using an
          install of OpenDDS.

        * tests/DCPS/SubscriberCycle/Subscriber.cpp:

          Fixed warning about signed/unsigned comparison.

Mon Apr 15 15:47:37 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/SubscriberCycle/SubscriberCycle.mpc:

          Fix so test builds when using an install of OpenDDS.

Mon Apr 15 12:57:37 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/SubscriberCycle/Subscriber.cpp:

          Added #include to explicity pick up definition of
          DDS::ContentFilteredTopic_ptr.

Fri Apr 12 14:14:23 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * DDS_TAOv2.mwc:

          Added DynamicInterface to the list of TAO libraries used.
          The DOC Group version now requires it for IORTable.

Thu Apr 11 14:31:09 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/SubscriberCycle/SubscriberListenerImpl.cpp:

          Fixed Visual C++ compile error.

Wed Apr 10 20:19:29 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          During cleanup cancel any deadline watchdog timers associated
          with the reader. This fixes a problem when the reader's subscriber
          is deleted in one thread while deadline timeout handling in the
          watchdog thread tries to access the deleted subscriber.

        * bin/dcps_tests.lst:
        * tests/DCPS/SubscriberCycle:
        * tests/DCPS/SubscriberCycle/ParticipantTask.h:
        * tests/DCPS/SubscriberCycle/ParticipantTask.cpp: